# ComfyUI-Maya1_TTS_PR

./: GGUF_USAGE.md  README.md  check_config.py  pyproject.toml  requirements.txt
core/: __init__.py  gguf_dequant.py  gguf_loader.py  gguf_ops.py  model_wrapper.py
example_workflow/: Maya1_TTS-example_workflow.json  Maya1_TTS-example_workflow_Custom-UI.json
nodes/: __init__.py  maya1_tts_barebones.py  maya1_tts_combined.py  maya1_tts_gguf.py
